--- a/cdnsystem/testdata/cdn/go.html
+++ b/cdnsystem/testdata/cdn/go.html
@@ -233,7 +233,7 @@ are particularly in need of outside help.
     <img class="Footer-gopher" src="https://golang.org/lib/godoc/images/footer-gopher.jpg" alt="The Go Gopher">
     <ul class="Footer-links">
       <li class="Footer-link"><a href="/doc/copyright.html">Copyright</a></li>
-      <li class="Footer-link"><a href="/doc/tos.html">Terms of REST</a></li>
+      <li class="Footer-link"><a href="/doc/tos.html">Terms of Service</a></li>
       <li class="Footer-link"><a href="http://www.google.com/intl/en/policies/privacy/">Privacy Policy</a></li>
       <li class="Footer-link"><a href="http://golang.org/issues/new?title=x/website:" target="_blank" rel="noopener">Report a website issue</a></li>
     </ul>
